<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />

        <variable
            name="signInActivityVM"
            type="com.app.acube.auth.SignInActivityVM" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_bg"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="@dimen/main_spacing_big">

            <TextView
                style="@style/MyTextView"
                android:layout_marginTop="@dimen/main_spacing_big"
                android:text="@string/sign_in"
                android:textSize="@dimen/main_text_big"
                android:textStyle="bold" />

            <EditText
                style="@style/MyEditText"
                android:layout_marginStart="@dimen/main_spacing_big"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="@dimen/main_spacing_big"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:text="@={signInActivityVM.etUsername}" />

            <EditText
                style="@style/MyEditText"
                android:layout_margin="@dimen/main_spacing_big"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@={signInActivityVM.etPassword}" />

            <Button
                style="@style/MyButtonBold"
                android:layout_margin="@dimen/main_spacing_big"
                android:backgroundTint="@color/colorAccent"
                android:includeFontPadding="false"
                android:onClick="@{signInActivityVM::onSubmit}"
                android:padding="@dimen/main_spacing_big"
                android:text="@string/sign_in" />

        </LinearLayout>

    </ScrollView>

</layout>